# shell

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
src/: constants.py  logger.py  main.py  shell.py
src/commands/: __init__.py  advanced.py  archive.py  base.py  filesystem.py
src/shell_emulator_lab2.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: conftest.py  test_advanced.py  test_archive.py  test_cat.py  test_cd.py  test_cp.py  test_filesystem.py  test_grep.py  test_history.py  test_ls.py  test_mv.py  test_pwd.py  test_rm.py  test_tar.py  test_undo.py  test_untar.py  test_unzip.py  test_zip.py
