[project]
name = "shell-emulator-lab2"
version = "1.0.0"
description = "Shell emulator for MAI Python Lab 2"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest==8.4.2",
    "mypy==1.18.2",
    "ruff==0.14.3",
    "pre-commit==4.3.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
